--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -62,7 +62,7 @@ header {
 }
 
 .form-group button {
-  background-image: linear-gradient(-90deg, #ff7373 0%, #fddb33 100%);
+  background-image: linear-gradient(-90deg, #5271ff 0%, #004aad 100%);
   border-radius: 5px;
   border: 0;
   height: 45px;
@@ -116,4 +116,11 @@ header {
   font-family: "Montserrat Bold", sans-serif;
   font-weight: bold;
   margin-bottom: 0.75rem;
+}
+
+.chatgpt-response{
+  color: #fff;
+  font-family: "Montserrat Bold", sans-serif;
+  font-size: 14px;
+  padding: 20px;
 }
